# erasure_coding

./: CMakeLists.txt  README.md  compile.sh  create_dirs.sh  install_jerasure.sh  main.cpp
examples/: test_lrc.cpp  test_pc.cpp  test_rs.cpp
include/: common.h  devcommon.h  lrc.h  pc.h  rs.h
src/: common.cpp  lrc.cpp  pc.cpp  rs.cpp
tools/: generate_file.py
